--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 fastapi = "^0.115.11"
-uvicorn = "^0.34.0"
 sqlalchemy = "^2.0.38"
 alembic = "^1.14.1"
 asyncpg = "^0.30.0"
 greenlet = "^3.1.1"
 pydantic-settings = "^2.8.1"
 orjson = "^3.10.15"
+hypercorn = "^0.17.3"
 
 
 [tool.poetry.group.dev.dependencies]
